# Hula

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  codeo_gdpr.html  demo-db.sql  package-lock.json  rustfmt.toml  sample_gdpr.html  test.db
app/: index.html.js  package.json  rollup-plugin-hula-skinner.js  rollup.config.js
app/assets/: site.webmanifest
app/scss/: _bootstrap-icons.scss  _variables.scss  main.scss  styles.scss
app/src/: App.vue  api.js  index.html  main.js  router.js  testin.js  transitions.js  validation.js  views.js
migrations/2021-04-08-054628_users/: up.sql
migrations/2021-04-08-054641_invitations/: down.sql  up.sql
migrations/2021-04-20-060036_users/: up.sql
migrations/2021-04-20-060049_projects/: up.sql
migrations/2021-04-23-140534_new_tables/: up.sql
migrations/2021-04-26-103314_project_needs/: up.sql
migrations/2021-04-29-081548_rename_ids/: up.sql
migrations/2021-04-29-114248_add_columns_invitations/: up.sql
migrations/2021-04-29-122344_add_columns_users/: up.sql
migrations/2021-04-29-124535_add_columns_projects/: up.sql
migrations/2021-04-29-125141_rename_all_ids/: up.sql
migrations/2021-04-30-071758_add_column_users/: up.sql
migrations/2021-05-03-070511_all_select/: up.sql
postmantests/: tests.js
public/: index.html
src/: actions.rs  auth_handler.rs  email_service.rs  errors.rs  handlers.rs  invitation_handler.rs  main.rs  models.rs  models2.rs  modelsdb.rs  oneproject_handler.rs  oneuser_handler.rs  projects_handler.rs  queries.rs  register_handler.rs  repositories.rs  schema.rs  users_handler.rs  utils.rs
(+201 files in other folders)
