[package]
name = "poc-rust-vue"
version = "0.1.0"
license="MPL-2.0+/LGPL-3.0+"
authors = ["ninjapiraatti"]
edition = "2018"

[dependencies]
actix-files = "0.5.0"
actix-session = "0.4.1"
actix-identity = "0.3"
actix-rt = "1.1"
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.8"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.2.2"
